# vector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  cargo-geiger.json  cliff.toml  deny.toml  rust-toolchain.toml
crates/vector-app/: Cargo.toml  build.rs
crates/vector-app/resources/: Info.plist.partial
crates/vector-app/src/: app.rs  auth_actor.rs  auth_modal.rs  chrome.rs  clipboard_router.rs  codespaces_actor.rs  codespaces_modal.rs  devtunnels_actor.rs  devtunnels_modal.rs  frame_tick.rs  github_auth_modal.rs  hyperlink_dispatch.rs  ime.rs  input_bridge.rs  lib.rs  lpm.rs  main.rs  menu.rs  microsoft_auth_modal.rs  mux_commands.rs  overlay.rs  profile_picker.rs  pty_actor.rs  relative_time.rs  render_host.rs  search_bar.rs  ske.rs  tab_window.rs  term_grid_access.rs  tick.rs  toast.rs
crates/vector-app/tests/: app_default_fields.rs  auth_modal_state.rs  chrome_render_orchestration.rs  clipboard_router_wiring.rs  cmd_c_selection.rs  cmd_n.rs  devtunnels_picker.rs  frame_pacing.rs  github_signin_menu.rs  handler_state_mutation.rs  hyperlink_dispatch.rs  ime.rs  ime_shim.rs  microsoft_signin_menu.rs  multi_window_tabbing.rs  no_tokio_main.rs  profile_picker.rs  pty_actor_reconnect.rs  reconnect_byte_integrity.rs  reconnect_pass_render.rs  relative_time.rs  search_bar.rs  selection_render.rs  ske.rs  spawn_new_window.rs  switch_profile_menu.rs  switch_profile_menu_idempotent.rs  win_style_mask.rs
crates/vector-arch-tests/: Cargo.toml
crates/vector-arch-tests/src/: lib.rs
crates/vector-arch-tests/tests/: no_token_in_debug_or_log.rs  no_tokio_main.rs  path_deps_have_versions.rs  workspace_lints_inheritance.rs
crates/vector-codespaces/: Cargo.toml
crates/vector-codespaces/src/: lib.rs  model.rs
crates/vector-codespaces/tests/: auth_refresh.rs  codespaces_api.rs  codespaces_rest.rs  device_flow.rs  keychain_roundtrip.rs  token_redaction_runtime.rs
crates/vector-config/: Cargo.toml
crates/vector-config/src/: apply.rs  error.rs  lib.rs  loader.rs  schema.rs  watcher.rs  writer.rs
crates/vector-config/tests/: apply_pipeline.rs  profile_writer.rs  schema_and_loader.rs  watcher_debounce.rs
crates/vector-fonts/: Cargo.toml
crates/vector-fonts/src/: glyph.rs  lib.rs  loader.rs  width.rs
crates/vector-fonts/tests/: atlas_lru_eviction.rs  crossfont_load_bundled.rs  grayscale_pixel_format.rs  ligatures.rs  no_tokio_main.rs  two_atlas_split.rs
crates/vector-headless/: Cargo.toml
crates/vector-headless/src/: bridge.rs  cli.rs  main.rs  render.rs  sigwinch.rs
crates/vector-headless/tests/: no_tokio_main.rs
crates/vector-input/: Cargo.toml
crates/vector-input/src/: clipboard.rs  keymap.rs  lib.rs  mods.rs  paste.rs  selection.rs  selection_string.rs
crates/vector-input/tests/: bracketed_paste_wrap.rs  chrome_shortcuts.rs  clipboard.rs  no_tokio_main.rs  selection_string.rs  xterm_key_table.rs
crates/vector-mux/: Cargo.toml
crates/vector-mux/src/: codespace_domain.rs  cwd.rs  devtunnel_domain.rs  domain.rs  ids.rs  lib.rs  local_domain.rs  mux.rs  pane.rs  proc_tracker.rs  spawned_pane.rs  split_tree.rs  tab.rs  transport.rs  window.rs
crates/vector-mux/tests/: cwd_fallback.rs  cwd_inheritance.rs  directional_focus.rs  mux_close_cascade.rs  mux_tab_cycle.rs  mux_topology.rs  osc7_consumer.rs  pane_resize_propagates.rs  proc_name_tracking.rs  profile_local_spawn.rs  reconnect_trait.rs  split_resize_nudge.rs  split_tree.rs  trait_object_safety.rs
crates/vector-pty/: Cargo.toml
crates/vector-pty/src/: error.rs  lib.rs  local.rs
crates/vector-pty/tests/: lifecycle.rs  term_env_advertise.rs
crates/vector-render/: Cargo.toml
crates/vector-render-snapshots/: Cargo.toml
crates/vector-render-snapshots/src/: lib.rs
crates/vector-render-snapshots/tests/: no_tokio_main.rs
crates/vector-render/examples/: perf_probe.rs
crates/vector-render/src/: atlas.rs  cell_pipeline.rs  chrome_quad.rs  compositor.rs  cursor_pipeline.rs  lib.rs  picker_pass.rs  pipeline.rs  reconnect_pass.rs  search_bar_pass.rs  tint_stripe.rs  toast_pass.rs
crates/vector-render/tests/: active_pane_border.rs  atlas_lru.rs  cursor_overlay_snapshot.rs  damage_to_quads.rs  dpr_change_invalidates.rs  idle_no_redraw.rs  no_tokio_main.rs  pipeline_init.rs  pty_coalesce.rs  search_bar_layout.rs  selection_overlay_snapshot.rs  snapshot_clearcolor.rs  snapshot_singlecell.rs  snapshot_truecolor.rs  tint_stripe.rs  toast_layout.rs
crates/vector-secrets/: Cargo.toml
crates/vector-secrets/src/: lib.rs
crates/vector-secrets/tests/: microsoft_account.rs
crates/vector-ssh/: Cargo.toml
crates/vector-ssh/src/: client.rs  error.rs  handler.rs  lib.rs  stdio_stream.rs  transport.rs
crates/vector-ssh/tests/: connect_stdio_stream.rs  resize_enqueue.rs  window_change_dispatch.rs
crates/vector-term/: Cargo.toml
crates/vector-term/src/: dims.rs  hyperlink.rs  lib.rs  listener.rs  osc_sniff.rs  parser.rs  search.rs  term.rs
crates/vector-term/tests/: alt_screen_1049.rs  csi_dispatch.rs  dcs_dispatch.rs  decstbm_scroll_region.rs  dynamic_color_response.rs  ed_el_erase.rs  grapheme_width.rs  hyperlinks.rs  no_transport_discrimination.rs  osc52.rs  osc52_tmux.rs  osc_dispatch.rs  osc_sniff.rs  partial_utf8.rs  scrollback_search.rs  sgr_truecolor.rs  vt_conformance.rs
crates/vector-theme/: Cargo.toml
crates/vector-theme/src/: appearance.rs  builtins.rs  error.rs  itermcolors.rs  lib.rs  palette.rs
crates/vector-theme/tests/: appearance.rs  builtins.rs  itermcolors.rs
crates/vector-tunnel-agent/: Cargo.toml  README.md
crates/vector-tunnel-agent/debian/: postinst  prerm
crates/vector-tunnel-agent/src/: auth.rs  cli.rs  host.rs  lib.rs  main.rs  session.rs  token_cache.rs
crates/vector-tunnel-agent/tests/: auth_poll.rs  auth_token_cache.rs  no_tokio_main.rs  protocol_codec.rs  (+1 more)
crates/vector-tunnel-protocol/: Cargo.toml
crates/vector-tunnels/: Cargo.toml
crates/vector-ui/: Cargo.toml
docs/: setup.md
xtask/: Cargo.toml
xtask/scripts/: render-dmg-bg.sh
xtask/src/: agent_dist.rs  dmg.rs  icon.rs  main.rs  release.rs
(+310 files in other folders)
