[workspace]
resolver = "2"
members = [
    "crates/vector-app",
    "crates/vector-ui",
    "crates/vector-render",
    "crates/vector-mux",
    "crates/vector-term",
    "crates/vector-pty",
    "crates/vector-ssh",
    "crates/vector-codespaces",
    "crates/vector-tunnels",
    "crates/vector-config",
    "crates/vector-secrets",
    "crates/vector-fonts",
    "crates/vector-input",
    "crates/vector-theme",
]

[workspace.package]
version = "2026.05.10"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Vector contributors"]
repository = "https://github.com/colligo/vector"

[workspace.dependencies]
winit = { version = "0.30.13", default-features = false, features = ["rwh_06"] }
objc2 = "0.6.4"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation", "objc2-core-graphics"] }
raw-window-handle = "0.6"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
await_holding_lock = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
doc_markdown = "allow"
unnecessary_debug_formatting = "allow"
