[workspace]
resolver = "2"
members = [
    "crates/vector-app",
    "crates/vector-ui",
    "crates/vector-render",
    "crates/vector-render-snapshots",
    "crates/vector-mux",
    "crates/vector-term",
    "crates/vector-pty",
    "crates/vector-ssh",
    "crates/vector-tunnels",
    "crates/vector-tunnel-agent",
    "crates/vector-tunnel-protocol",
    "crates/vector-config",
    "crates/vector-secrets",
    "crates/vector-fonts",
    "crates/vector-headless",
    "crates/vector-input",
    "crates/vector-theme",
    "crates/vector-arch-tests",
]

[workspace.package]
version = "2026.5.10"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Vector contributors"]
repository = "https://github.com/colligo/vector"

[workspace.dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
crossfont = "0.9"
dirs = "5"
etagere = "0.2"
hostname = "0.4"
nix = { version = "0.29", features = ["user", "fs"] }
fuzzy-matcher = "0.3"
http = "1"
# keyring 4.x is the CLI binary crate; the library now lives in keyring-core.
# Pair with apple-native-keyring-store for the macOS Keychain backend.
keyring-core = "1.0"
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }
libc = "0.2"
libproc = "0.14"
notify = "8"
notify-debouncer-full = "0.5"
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
objc2 = "0.6.4"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-foundation", "objc2-core-graphics"] }
octocrab = "0.50"
parking_lot = "0.12"
percent-encoding = "2"
plist = "1.9"
pollster = "0.4"
portable-pty = "0.9"
raw-window-handle = "0.6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "http2"] }
russh = "0.60"
serde = { version = "1.0.228", features = ["derive"] }
ssh-key = { version = "0.6", default-features = false, features = ["ed25519", "alloc", "rand_core"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = "0.7"
tokio-tungstenite = "0.29"
# Phase 8: Microsoft dev-tunnels SDK pinned at the same SHA VS Code's CLI uses.
tunnels = { git = "https://github.com/microsoft/dev-tunnels", rev = "64048c1409ff56cb958b879de7ea069ec71edc8b", features = ["connections"] }
vector-tunnel-protocol = { path = "crates/vector-tunnel-protocol", version = "2026.5.10" }
vector-tunnels = { path = "crates/vector-tunnels", version = "2026.5.10" }
toml = "1.1.2"
toml_edit = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
urlencoding = "2"
wgpu = { version = "29", default-features = false, features = ["metal", "wgsl"] }
winit = { version = "0.30.13", default-features = false, features = ["rwh_06"] }
wiremock = "0.6"
zeroize = { version = "1", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
await_holding_lock = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
doc_markdown = "allow"
unnecessary_debug_formatting = "allow"

# D-83 sub-items #1 + #2 arch-lint tests are hosted by the `vector-arch-tests`
# member crate (no library, no binary — only ships `tests/*.rs`).
# Tests must live at workspace level (single source of truth) per CONTEXT D-83 #2.

# Phase 8 D-A2: unify russh under Microsoft's fork so the `tunnels` SDK
# (pinned to russh 0.37 internally) and Vector's own code resolve to one
# russh in the dep graph. This downgrades workspace russh from 0.60 to 0.37
# at the API surface for any crate that uses it directly.
[patch.crates-io]
russh = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-keys = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
russh-cryptovec = { git = "https://github.com/microsoft/vscode-russh", branch = "main" }
