[package]
name = "vector-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vector — native macOS terminal app shell."

[[bin]]
name = "vector-app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
objc2-quartz-core.workspace = true
raw-window-handle.workspace = true
vector-fonts = { path = "../vector-fonts" }
vector-input = { path = "../vector-input" }
vector-mux = { path = "../vector-mux" }
vector-render = { path = "../vector-render" }
vector-term = { path = "../vector-term" }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[lints]
workspace = true

[package.metadata.bundle]
name = "Vector"
identifier = "com.vector.app"
icon = ["resources/icon.icns"]
copyright = "© 2026 Vector contributors"
category = "public.app-category.developer-tools"
short_description = "Native macOS terminal with first-class GitHub Codespaces support."
long_description = """
Vector is a fast native macOS terminal — written in Rust, GPU-accelerated —
with first-class GitHub Codespaces and Dev Tunnels support.
"""
osx_minimum_system_version = "13.0"
osx_info_plist_exts = ["resources/Info.plist.partial"]
resources = [
    "resources/Fonts/JetBrainsMono-Regular.ttf",
    "resources/Fonts/LICENSE-JetBrainsMono.txt",
]
