[package]
name = "vector-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vector — native macOS terminal app shell."

[[bin]]
name = "vector-app"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
parking_lot.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
wgpu.workspace = true
winit.workspace = true
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
objc2-quartz-core.workspace = true
raw-window-handle.workspace = true
vector-fonts = { path = "../vector-fonts", version = "2026.5.10" }
vector-input = { path = "../vector-input", version = "2026.5.10" }
vector-mux = { path = "../vector-mux", version = "2026.5.10" }
vector-render = { path = "../vector-render", version = "2026.5.10" }
vector-term = { path = "../vector-term", version = "2026.5.10" }

[dev-dependencies]
async-trait = { workspace = true }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# vector-app cannot use `[lints] workspace = true` because it must override
# the workspace's `unsafe_code = "deny"` to permit AppKit FFI: NSTextInputClient
# (D-81), SKE Carbon (D-80), NSPasteboard (Cmd-C / OSC 52). All other lint rules
# mirror the workspace exactly so behavior remains consistent.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
await_holding_lock = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
doc_markdown = "allow"
unnecessary_debug_formatting = "allow"

[package.metadata.bundle]
name = "Vector"
identifier = "com.vector.app"
icon = ["resources/icon.icns"]
copyright = "© 2026 Vector contributors"
category = "public.app-category.developer-tools"
short_description = "Native macOS terminal with first-class GitHub Codespaces support."
long_description = """
Vector is a fast native macOS terminal — written in Rust, GPU-accelerated —
with first-class GitHub Codespaces and Dev Tunnels support.
"""
osx_minimum_system_version = "13.0"
osx_info_plist_exts = ["resources/Info.plist.partial"]
resources = [
    "resources/Fonts/JetBrainsMono-Regular.ttf",
    "resources/Fonts/LICENSE-JetBrainsMono.txt",
]
