[package]
name = "vector-arch-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Workspace-level architecture-lint tests (D-83 #1 + #2). No library, no binary — tests only."
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
toml = { workspace = true }

[lints]
workspace = true
