[package]
name = "vector-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML config + hot reload — Phase 5 (serde + toml + notify)."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
