[package]
name = "vector-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TOML config + hot reload — Phase 5 (serde + toml + notify)."

[dependencies]
anyhow.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
