[package]
name = "vector-headless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Headless pass-through proxy binary (D-36) — bridges parent stdin/stdout to a $SHELL PTY via vector-term + vector-mux."

[[bin]]
name = "vector-headless"
path = "src/main.rs"

[dependencies]
vector-term = { path = "../vector-term", version = "2026.5.10" }
vector-pty = { path = "../vector-pty", version = "2026.5.10" }
vector-mux = { path = "../vector-mux", version = "2026.5.10" }
alacritty_terminal = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "signal", "io-std", "io-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
scopeguard = "1"
parking_lot = "0.12"

[lints]
workspace = true
