[package]
name = "vector-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Keymap + paste + selection state — Phase 3 (D-52, D-53, D-54)."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
vector-mux = { path = "../vector-mux" }
winit.workspace = true

[lints]
workspace = true
