[package]
name = "vector-mux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PtyTransport + Domain traits + LocalDomain — Phase 2 (D-38)."

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vector-pty = { path = "../vector-pty", version = "2026.5.10" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }

[lints]
workspace = true
