[package]
name = "vector-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Local PTY pair + child spawn — Phase 2 (portable-pty wrapper)."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
