[package]
name = "vector-render-snapshots"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"

# Cargo only auto-discovers `tests/*.rs` (top-level). The four scene tests live
# under `tests/scenes/` per HARDEN-01 D-02 file layout — declare them explicitly.
[[test]]
name = "plain_text_unicode_emoji"
path = "tests/scenes/plain_text_unicode_emoji.rs"

[[test]]
name = "alt_screen_colors_selection"
path = "tests/scenes/alt_screen_colors_selection.rs"

[[test]]
name = "reconnect_bar_tab_badge"
path = "tests/scenes/reconnect_bar_tab_badge.rs"

[[test]]
name = "split_panes_scrollback"
path = "tests/scenes/split_panes_scrollback.rs"

# HARDEN-01 D-26 — `insta` + `image-compare` scoped to this crate ONLY.
# Do NOT promote to [workspace.dependencies]; production crates must stay free
# of image/diff/snapshot deps.
[dev-dependencies]
insta = { version = "1.47.2", features = ["yaml"] }
image-compare = "0.5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
vector-render = { path = "../vector-render", version = "2026.5.10" }
vector-term = { path = "../vector-term", version = "2026.5.10" }
vector-fonts = { path = "../vector-fonts", version = "2026.5.10" }
wgpu = { workspace = true }
