[package]
name = "vector-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GPU pipeline, glyph atlas, damage tracking — Phase 3 (wgpu, Metal)."

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
etagere.workspace = true
parking_lot.workspace = true
pollster.workspace = true
thiserror.workspace = true
tracing.workspace = true
vector-fonts = { path = "../vector-fonts" }
vector-term = { path = "../vector-term" }
wgpu.workspace = true
winit.workspace = true

[lints]
workspace = true
