[package]
name = "vector-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS Keychain token storage — Phase 6 (keyring 4.0)."

[dependencies]
anyhow.workspace = true
keyring-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store.workspace = true

[lints]
workspace = true
