[package]
name = "vector-theme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Palette types + builtin themes — Phase 5."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
