[package]
name = "vector-theme"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Palette types + builtin themes — Phase 5."

[dependencies]
plist.workspace = true
thiserror.workspace = true
tracing.workspace = true
vector-config = { path = "../vector-config", version = "2026.5.10" }

[lints]
workspace = true
