[package]
name = "vector-tunnel-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vector Tunnel Agent — Linux user-space binary that hosts a Dev Tunnel and serves PTY shells (Phase 8 D-A1 Path 2c)."

[lints]
workspace = true

[lib]
name = "vector_tunnel_agent"
path = "src/lib.rs"

[[bin]]
name = "vector-tunnel-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
vector-tunnel-protocol = { workspace = true }
base64 = { workspace = true }
oauth2 = { workspace = true }
keyring-core = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
zeroize = { workspace = true }
tunnels = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal", "test-util"] }
