[package]
name = "vector-tunnel-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vector Tunnel Agent — Linux user-space binary that hosts a Dev Tunnel and serves PTY shells (Phase 8 D-A1 Path 2c)."

[lints]
workspace = true

[lib]
name = "vector_tunnel_agent"
path = "src/lib.rs"

[[bin]]
name = "vector-tunnel-agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
portable-pty = { workspace = true }
vector-tunnel-protocol = { workspace = true }
base64 = { workspace = true }
oauth2 = { workspace = true }
keyring-core = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
hostname = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
zeroize = { workspace = true }
tunnels = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal", "test-util"] }

# cargo-deb metadata: Plan 08-06 D-01. Produces .deb on Linux x86_64 + aarch64.
[package.metadata.deb]
name = "vector-tunnel-agent"
maintainer = "Vector contributors <noreply@github.com>"
copyright = "2026, Vector contributors. MIT licensed."
license-file = ["../../LICENSE", "0"]
extended-description = """
Vector Tunnel Agent. Hosts a Microsoft Dev Tunnel and serves PTY shells
to the Vector terminal app on macOS. Sign in once with GitHub or
Microsoft; the agent then accepts incoming relay connections from
Vector for the duration it runs.
"""
section = "net"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/vector-tunnel-agent", "usr/bin/vector-tunnel-agent", "755"],
    ["README.md", "usr/share/doc/vector-tunnel-agent/README.md", "644"],
]
conf-files = []
maintainer-scripts = "debian/"
