[package]
name = "vector-tunnel-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Vector Tunnel Agent wire protocol — JSON frames between Mac client and agent."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
